--- a/index.html
+++ b/index.html
@@ -269,6 +269,58 @@
     </div>
 </section>
 
+<section class="sustentabilidade">
+    <h1>Sustentabilidade em Foco</h1>
+    <div class="item">
+        <button class="accordion">Práticas Agroecológicas</button>
+        <div class="panel">
+            <p>Promovemos o uso eficiente de recursos, a preservação do meio ambiente e o bem-estar dos colaboradores e da comunidade.</p>
+        </div>
+    </div>
+    <div class="item">
+        <button class="accordion">Economia Circular</button>
+        <div class="panel">
+            <ul>
+                <li>Reciclagem e reaproveitamento de resíduos</li>
+                <li>Uso racional de energia e água</li>
+                <li>Desenvolvimento de embalagens sustentáveis</li>
+            </ul>
+        </div>
+    </div>
+    <div class="item">
+        <button class="accordion">Certificações e Selos Verdes</button>
+        <div class="panel">
+            <p>Ajudamos nossos clientes a obter certificações que comprovam seu compromisso com a sustentabilidade.</p>
+        </div>
+    </div>
+</section>
+
+<section class="success-cases">
+    <h1>Casos de Sucesso</h1>
+    <div class="timeline">
+        <div class="timeline-item">
+            <div class="content">
+                <h2>Fazenda da Família Silva</h2>
+                <p>Aumento de 25% na produtividade de grãos com a adoção de agricultura de precisão.</p>
+            </div>
+            <div class="number">1</div>
+        </div>
+        <div class="timeline-item">
+            <div class="content">
+                <h2>Cooperativa Agrícola Unida</h2>
+                <p>Redução de 30% no custo de insumos agrícolas através de gestão integrada de recursos.</p>
+            </div>
+            <div class="number">2</div>
+        </div>
+        <div class="timeline-item">
+            <div class="content">
+                <h2>Vinícola Montecarlo</h2>
+                <p>Obtenção de certificação orgânica e melhoria da qualidade dos vinhos.</p>
+            </div>
+            <div class="number">3</div>
+        </div>
+    </div>
+</section>
 
     </main>
     <footer>
