--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </div>
 </section>
 
-<section class="sustentabilidade">
+<section id="sustentabilidade">
     <h1>Sustentabilidade em Foco</h1>
     <div class="item">
         <button class="accordion">Práticas Agroecológicas</button>
@@ -291,33 +291,6 @@
         <button class="accordion">Certificações e Selos Verdes</button>
         <div class="panel">
             <p>Ajudamos nossos clientes a obter certificações que comprovam seu compromisso com a sustentabilidade.</p>
-        </div>
-    </div>
-</section>
-
-<section class="success-cases">
-    <h1>Casos de Sucesso</h1>
-    <div class="timeline">
-        <div class="timeline-item">
-            <div class="content">
-                <h2>Fazenda da Família Silva</h2>
-                <p>Aumento de 25% na produtividade de grãos com a adoção de agricultura de precisão.</p>
-            </div>
-            <div class="number">1</div>
-        </div>
-        <div class="timeline-item">
-            <div class="content">
-                <h2>Cooperativa Agrícola Unida</h2>
-                <p>Redução de 30% no custo de insumos agrícolas através de gestão integrada de recursos.</p>
-            </div>
-            <div class="number">2</div>
-        </div>
-        <div class="timeline-item">
-            <div class="content">
-                <h2>Vinícola Montecarlo</h2>
-                <p>Obtenção de certificação orgânica e melhoria da qualidade dos vinhos.</p>
-            </div>
-            <div class="number">3</div>
         </div>
     </div>
 </section>
