--- a/index.html
+++ b/index.html
@@ -295,6 +295,23 @@
     </div>
 </section>
 
+<section id="carrossel">
+    <div class="conteudo__geral">
+        <div class="container">
+            <div class="container-carrossel">
+                <div class="carrossel">
+                    <div class="carrossel-item"></div>
+                    <div class="carrossel-item"></div>
+                    <div class="carrossel-item"></div>
+                    <div class="carrossel-item"></div>
+                    <div class="carrossel-item"></div>
+                    <div class="carrossel-item"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
     </main>
     <footer>
         <p>&copy; 2024 Agricultura Inteligente</p>
