--- a/index.html
+++ b/index.html
@@ -107,32 +107,32 @@
         </div>
 
         <div id="languageModal" class="modal">
-            <span id="closeLanguageModal">&times;</span>
-            <h2 id="languageModalTitle">Choose Language</h2>
-            <form id="languageList">
-                <label id="languageOption1" class="language-option container1">
-                    <input type="radio" id="languageCheckbox1" name="language" value="English">
-                    <svg id="languageSvg1" viewBox="0 0 64 64" height="2em" width="2em">
-                        <path id="languagePath1" d="M 0 16 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 16 L 32 48 L 64 16 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 16" pathLength="575.0541381835938" class="path"></path>
-                    </svg>
-                    English
-                </label>
-                <label id="languageOption2" class="language-option container2">
-                    <input type="radio" id="languageCheckbox2" name="language" value="Spanish">
-                    <svg id="languageSvg2" viewBox="0 0 64 64" height="2em" width="2em">
-                        <path id="languagePath2" d="M 0 16 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 16 L 32 48 L 64 16 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 16" pathLength="575.0541381835938" class="path"></path>
-                    </svg>
-                    Spanish
-                </label>
-                <label id="languageOption3" class="language-option container3">
-                    <input type="radio" id="languageCheckbox3" name="language" value="Português">
-                    <svg id="languageSvg3" viewBox="0 0 64 64" height="2em" width="2em">
-                        <path id="languagePath3" d="M 0 16 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 16 L 32 48 L 64 16 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 16" pathLength="575.0541381835938" class="path"></path>
-                    </svg>
-                    Português
-                </label>
-            </form>
-        </div>
+    <span id="closeLanguageModal">&times;</span>
+    <h2 id="languageModalTitle">Choose Language</h2>
+    <form id="languageList">
+        <label id="languageOption1" class="language-option container1">
+            <input type="checkbox" id="languageCheckbox1" name="language" value="English">
+            <svg id="languageSvg1" viewBox="0 0 64 64" height="20" width="20">
+                <path id="languagePath1" d="M 0 16 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 16 L 32 48 L 64 16 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 16" pathLength="575.0541381835938" class="path"></path>
+            </svg>
+            English
+        </label>
+        <label id="languageOption2" class="language-option container2">
+            <input type="checkbox" id="languageCheckbox2" name="language" value="Spanish">
+            <svg id="languageSvg2" viewBox="0 0 64 64" height="20" width="20">
+                <path id="languagePath2" d="M 0 16 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 16 L 32 48 L 64 16 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 16" pathLength="575.0541381835938" class="path"></path>
+            </svg>
+            Spanish
+        </label>
+        <label id="languageOption3" class="language-option container3">
+            <input type="checkbox" id="languageCheckbox3" name="language" value="Português">
+            <svg id="languageSvg3" viewBox="0 0 64 64" height="20" width="20">
+                <path id="languagePath3" d="M 0 16 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 16 L 32 48 L 64 16 V 8 A 8 8 90 0 0 56 0 H 8 A 8 8 90 0 0 0 8 V 56 A 8 8 90 0 0 8 64 H 56 A 8 8 90 0 0 64 56 V 16" pathLength="575.0541381835938" class="path"></path>
+            </svg>
+            Português
+        </label>
+    </form>
+</div>
           
     
         <div id="main-content" class="hide">
