--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </label>
                     </div>
                     <div class="form-control">
-                        <input type="text" id="password" name="password" required="">
+                        <input type="password" id="password" name="password" required="">
                         <label>
                             <span style="transition-delay:0ms">P</span><span style="transition-delay:50ms">a</span><span style="transition-delay:100ms">s</span><span style="transition-delay:150ms">s</span><span style="transition-delay:200ms">w</span><span style="transition-delay:250ms">o</span><span style="transition-delay:300ms">r</span><span style="transition-delay:350ms">d</span>
                         </label>
