--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
 
 <nav>
     <ul>
-        <li><button id="toggle-gestao" class="toggle-section" data-target="#gestao" data-translate="farm-management">Gestão da Fazenda</button></li>
         <li><button id="toggle-pragas" class="toggle-section" data-target="#pragas" data-translate="pest-disease">Identificação de Pragas e Doenças</button></li>
         <li><button id="toggle-fertilizantes" class="toggle-section" data-target="#fertilizantes" data-translate="fertilizer-app">Aplicação de Fertilizantes e Defensivos</button></li>
         <li><button id="toggle-weather" class="toggle-section" data-target="#clima" data-translate="weather-forecast">Previsão do Tempo</button></li>
@@ -435,53 +434,53 @@
             <p id="fertilizantes-extra" class="hide" data-translate="informacoesAdicionais3">Aplicar fertilizantes e defensivos de forma adequada é essencial para promover o crescimento saudável das suas plantas e prevenir problemas. Utilize essas orientações para maximizar a eficiência dos seus insumos.</p>
         </section>  
 
-       <section id="tecnologia">
-    <h1>Tecnologias Avançadas</h1>
-    <div class="Tecnologia-container">
-        <div class="Tecnologia">
-            <h3>Agricultura de Precisão</h3>
-            <p>Sensores, drones e imagens de satélite para coleta de dados precisos.</p>
-        </div>
-        <div class="Tecnologia">
-            <h3>Automação de Processos</h3>
-            <p>Mecanização inteligente e robótica para otimizar a produtividade.</p>
-        </div>
-        <div class="Tecnologia">
-            <h3>Análise de Dados</h3>
-            <p>Plataformas de inteligência artificial para tomada de decisões informadas.</p>
-        </div>
-        <div class="Tecnologia">
-            <h3>Agricultura Protegida</h3>
-            <p>Soluções de cultivo em ambiente controlado para maior eficiência.</p>
-        </div>
-    </div>
-</section>
-
-<section id="sustentabilidade">
-    <h1>Sustentabilidade em Foco</h1>
-    <div class="item">
-        <button class="accordion">Práticas Agroecológicas</button>
-        <div class="panel">
-            <p>Promovemos o uso eficiente de recursos, a preservação do meio ambiente e o bem-estar dos colaboradores e da comunidade.</p>
-        </div>
-    </div>
-    <div class="item">
-        <button class="accordion">Economia Circular</button>
-        <div class="panel">
-            <ul>
-                <li>Reciclagem e reaproveitamento de resíduos</li>
-                <li>Uso racional de energia e água</li>
-                <li>Desenvolvimento de embalagens sustentáveis</li>
-            </ul>
-        </div>
-    </div>
-    <div class="item">
-        <button class="accordion">Certificações e Selos Verdes</button>
-        <div class="panel">
-            <p>Ajudamos nossos clientes a obter certificações que comprovam seu compromisso com a sustentabilidade.</p>
-        </div>
-    </div>
-</section>
+        <section id="tecnologia">
+            <h1 data-translate="advanced-technologies">Tecnologias Avançadas</h1>
+            <div class="Tecnologia-container">
+                <div class="Tecnologia">
+                    <h3 data-translate="precision-agriculture">Agricultura de Precisão</h3>
+                    <p data-translate="precision-agriculture-info">Sensores, drones e imagens de satélite para coleta de dados precisos.</p>
+                </div>
+                <div class="Tecnologia">
+                    <h3 data-translate="process-automation">Automação de Processos</h3>
+                    <p data-translate="process-automation-info">Mecanização inteligente e robótica para otimizar a produtividade.</p>
+                </div>
+                <div class="Tecnologia">
+                    <h3 data-translate="data-analysis">Análise de Dados</h3>
+                    <p data-translate="data-analysis-info">Plataformas de inteligência artificial para tomada de decisões informadas.</p>
+                </div>
+                <div class="Tecnologia">
+                    <h3 data-translate="protected-agriculture">Agricultura Protegida</h3>
+                    <p data-translate="protected-agriculture-info">Soluções de cultivo em ambiente controlado para maior eficiência.</p>
+                </div>
+            </div>
+        </section>
+        
+        <section id="sustentabilidade">
+            <h1 data-translate="sustainability-focus">Sustentabilidade em Foco</h1>
+            <div class="item">
+                <button class="accordion" data-translate="agroecological-practices">Práticas Agroecológicas</button>
+                <div class="panel">
+                    <p data-translate="agroecological-practices-info">Promovemos o uso eficiente de recursos, a preservação do meio ambiente e o bem-estar dos colaboradores e da comunidade.</p>
+                </div>
+            </div>
+            <div class="item">
+                <button class="accordion" data-translate="circular-economy">Economia Circular</button>
+                <div class="panel">
+                    <ul>
+                        <li data-translate="recycling-reuse">Reciclagem e reaproveitamento de resíduos</li>
+                        <li data-translate="energy-water-use">Uso racional de energia e água</li>
+                        <li data-translate="sustainable-packaging">Desenvolvimento de embalagens sustentáveis</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="item">
+                <button class="accordion" data-translate="certifications-green-labels">Certificações e Selos Verdes</button>
+                <div class="panel">
+                    <p data-translate="certifications-info">Ajudamos nossos clientes a obter certificações que comprovam seu compromisso com a sustentabilidade.</p>
+                </div>
+            </div>
+        </section>        
 
     </main>
     <footer>
