--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
 </head>
 
 <body>
-    <section id="preloader">
-        <div class="spinner"></div>
-        <div class="loading-text">
-            <span>I</span><span>n</span><span>i</span><span>c</span><span>i</span><span>a</span><span>n</span><span>d</span><span>o</span>
-            <span class="dot1">.</span><span class="dot2">.</span><span class="dot3">.</span>
+     <!-- Preloader -->
+     <div id="preloader" class="preloader">
+        <div class="hourglassBackground">
+            <div class="hourglassContainer">
+                <div class="hourglassCurves"></div>
+                <div class="hourglassCapTop"></div>
+                <div class="hourglassGlassTop"></div>
+                <div class="hourglassSand"></div>
+                <div class="hourglassSandStream"></div>
+                <div class="hourglassCapBottom"></div>
+                <div class="hourglassGlass"></div>
+            </div>
         </div>
-    </section>
+    </div>
 
 
     <header class="main-header">
@@ -480,8 +487,42 @@
                     <p data-translate="certifications-info">Ajudamos nossos clientes a obter certificações que comprovam seu compromisso com a sustentabilidade.</p>
                 </div>
             </div>
-        </section>        
+        </section>
 
+
+        <section id="eventos">
+            <div id="noticias-eventos">
+                <div id="imagem-noticias">
+                    <img src="imgs/agronomia.jpg" alt="Imagem de eventos e notícias" data-translate="imagemEventos">
+                </div>
+                <div id="texto-noticias">
+                    <h1 data-translate="noticiasEventos">Notícias e Eventos</h1>
+                    <div class="evento">
+                        <div class="numero">1</div>
+                        <div id="exposicao">
+                            <h2 data-translate="exposicaoTitulo">Exposição Agro Tech</h2>
+                            <p data-translate="exposicaoDescricao">Venha conhecer nossas soluções inovadoras na maior feira de tecnologia agrícola do país.</p>
+                        </div>
+                    </div>
+                    <div class="evento">
+                        <div class="numero">2</div>
+                        <div id="webinar">
+                            <h2 data-translate="webinarTitulo">Webinar: Agricultura 4.0</h2>
+                            <p data-translate="webinarDescricao">Participe do nosso webinar gratuito sobre as tendências e oportunidades da agricultura digital.</p>
+                        </div>
+                    </div>
+                    <div class="evento">
+                        <div class="numero">3</div>
+                        <div id="lancamento">
+                            <h2 data-translate="lancamentoTitulo">Lançamento de Produto</h2>
+                            <p data-translate="lancamentoDescricao">Apresentaremos em breve nossa nova plataforma de gerenciamento de fazendas.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
     <footer>
         <p>&copy; 2024 Agricultura Inteligente</p>
