--- a/index.html
+++ b/index.html
@@ -151,11 +151,14 @@
             </div>
         </div>
     </header>
-    <section  class="video">
+
+    <section id="video1" class="video">
         <video controls>
             <source src="video/video1.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
+    </section>
+    
     </section>
         <div class="content-container">
             <section class="quem-somos">
@@ -213,7 +216,7 @@
         <li><button id="toggle-monitoramento" class="toggle-section" data-target="#monitoramento-cultivos" data-translate="crop-monitoring">Monitoramento de Cultivos</button></li>
     </ul>
 </nav>
-<section class="video">
+<section id="video2" class="video">
     <video controls>
         <source src="video/video2.mp4" type="video/mp4">
         Seu navegador não suporta o elemento de vídeo.
